--- a/src/servers/subserv/Makefile
+++ b/src/servers/subserv/Makefile
@@ -1,5 +1,5 @@
-# Makefile for File System (FS)
-SERVER = fs
+# Makefile for Subscription Server (SS)
+SERVER = subserv
 
 # directories
 u = /usr
@@ -13,11 +13,7 @@ CFLAGS = -I$i $(EXTRA_OPTS)
 LDFLAGS = -i
 LIBS = -lsys -lsysutil -ltimers
 
-OBJ =	main.o open.o read.o write.o pipe.o dmap.o \
-	device.o path.o mount.o link.o super.o inode.o \
-	cache.o cache2.o filedes.o stadir.o protect.o time.o \
-	lock.o misc.o utility.o select.o timers.o table.o \
-	cdprobe.o subserv.o
+OBJ =	main.o
 
 # build local binary 
 all build:	$(SERVER)
