--- a/src/programs/Makefile
+++ b/src/programs/Makefile
@@ -5,11 +5,14 @@ all:
 	cc -o block_s block_s.c
 	cc -o tester tester.c
 	cc -o testing testing.c
+	cc -o website-list website-list.c
 run: all
 	./gen &; ./listener
-test:
+test: all
 	cc -o tester tester.c
 	./tester
 test_block: all
 	./block_s &; ./block
+test_web: all
+	./website-list
 
