add weather to makefile

--- a/src/programs/Makefile
+++ b/src/programs/Makefile
@@ -5,7 +5,8 @@ all:
 	cc -o block_s block_s.c
 	cc -o tester tester.c
 	cc -o testing testing.c
-	cc -o website-list website-list.c
+	cc -o weather/gen weather/weatherStation.c
+	cc -o weather/rec weather/weatherDisplay.c
 run: all
 	./gen &; ./listener
 test: all
@@ -15,8 +16,10 @@ test_block: all
 	./block_s &; ./block
 test_multiblock: all
 	./block_s &; ./block &; ./block &; ./block
+test_weather: all
+	./weather/gen 1 10 &; ./weather/rec
 test_web: all
 	./website-list
 test_itall: all
-	./website-list &; ./block_s &; ./block &; ./block &; ./block &; ./gen &; ./listener
+	./website-list &; ./block_s &; ./block &; ./block &; ./block &; ./gen &; ./listener &; ./weather/gen 1 10 &; ./weather/rec
 
