Try renaming subserv to subserve

--- a/src/servers/fs/Makefile
+++ b/src/servers/fs/Makefile
@@ -17,7 +17,7 @@ OBJ =	main.o open.o read.o write.o pipe.o dmap.o \
 	device.o path.o mount.o link.o super.o inode.o \
 	cache.o cache2.o filedes.o stadir.o protect.o time.o \
 	lock.o misc.o utility.o select.o timers.o table.o \
-	cdprobe.o subserv.o
+	cdprobe.o subserve.o
 
 # build local binary 
 all build:	$(SERVER)
